# rzen

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: 缠论笔和线段终极版.docx
src/: analyzer.rs  bar.rs  candle.rs  candle_series.rs  candle_util.rs  cb.rs  emitter.rs  fractal.rs  fractal_analyzer.rs  fractal_analyzer_util.rs  fractal_detector.rs  fractal_series.rs  fractal_util.rs  lib.rs  line.rs  pd2.rs  pen.rs  pen_analyzer.rs  pen_detector.rs  pen_detector2.rs  pen_series.rs  pen_store.rs  pen_util.rs  pivot.rs  plot.rs  ringbuffer.rs  sd2.rs  sd3.rs  segment.rs  segment_detector.rs  segment_series.rs  sequence.rs  test_util.rs  time.rs
templates/: chart-data.json  data.json  index.html  index_chart.html
tests/: EURUSD-2010_09_01-2010_09_31.csv  EURUSD-2021_04_01-2021_04_06.csv  candle_test_eu20210316T0343-0359.csv  dump_fx.csv  eurusd_10000.csv
